[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-belief-graph"
version = "0.1.0"
description = "Probabilistic temporal belief graph for uncertain narrative timelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "bayesian",
    "graph",
    "temporal",
    "probabilistic",
    "narrative",
    "timeline",
    "worldbuilding",
    "belief",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CHML-real/temporal-belief-graph"
Repository = "https://github.com/CHML-real/temporal-belief-graph"
Issues = "https://github.com/CHML-real/temporal-belief-graph"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["tbg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
